Edited the css to make the columns on non-game stretch to the bottom. Had to change the body background color to fix the problems that nested 100% height elements have if there's two children...

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,13 +29,12 @@ html, body, #main-container {
 }
 
 body {
-  background: #000;
+  background-color: #ccc;
   
   #main-container {
     padding: 0px;
-    background-color: #ccc;
     min-height: 100%;
-    height: auto !important;
+    //height: auto !important;
     height: 100%;
     margin: 0px;
     width: 100%;
