--- a/app/assets/stylesheets/non_games.css.scss
+++ b/app/assets/stylesheets/non_games.css.scss
@@ -1,4 +1,5 @@
 body.controller-puzzles, body.controller-users, body.controller-games.action-index {
+  
   // so you dont see the text selection cursor
   .unselectable {
     -webkit-touch-callout: none;
@@ -11,6 +12,7 @@ body.controller-puzzles, body.controller-users, body.controller-games.action-ind
   // the styling for an optionally scalable inner container
   .outer { 
     width: 100%;
+    height: 100%;
     margin: 0;
     padding-left: 25%;
     padding-right: 25%;
